apps/netpol/allow-frontend-to-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-db
  namespace: hrms
spec:
  podSelector:
    matchLabels:
      app: hrms-mariadb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hrms-frontend
      ports:
        - port: 3306
